syntax = "proto3";

package alertmanagerpb;

option go_package = "alertmanagerpb";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/weaveworks/common/httpgrpc/httpgrpc.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;

// Alertmanager interface exposed to the Alertmanager Distributor
service Alertmanager {
  rpc HandleRequest(httpgrpc.HTTPRequest) returns(httpgrpc.HTTPResponse) {};
}
